# zpm

./: .editorconfig  .gitignore  .pnp.cjs  .yarnrc.yml  Cargo.toml  README.md  eslint.config.mjs  install-script.sh  package.json  rust-toolchain.toml  test-overrides.txt  test-results.md  test-results.txt  tsconfig.base.json  tsconfig.json  tsconfig.node.json  yarn.config.ts  yarn.sh  yarn_run_priority_analysis.md
.claude/: settings.local.json
.cursor/rules/: tests.mdc
.github/actions/prepare/: action.yml
.github/actions/prepare-node/: action.yml
.github/workflows/: benchmark.yml  benchmarks.yml  build.yml  check-js.yml  check.yml  claude.yml  codspeed.yml  flamegraphs.yml  perfcheck-comment.yml  perfcheck.yml  releases.yml  tests.yml  v86.yml
.zed/: settings.json
contributing/: coding-style.md  general-commands.md
contributing/design/: cli-commands.md  configuration.md  install-pipeline.md  string-serialization.md
documentation/: CHANGELOG.md  README.md  astro.config.mjs  ec.config.mjs  env.d.ts  package.json  tsconfig.json  wrangler.jsonc
documentation/.astro/: content-modules.mjs  content.d.ts  data-store.json  settings.json
documentation/.astro/collections/: authors.schema.json  blog.schema.json  protocols.schema.json
documentation/public/: _redirects
documentation/src/: content.config.ts
documentation/src/api/: package.ts  packageChecks.ts  versions.ts
documentation/src/components/: Badge.tsx  Breadcrumbs.astro  CardSkeleton.tsx  CatShader.tsx  CommandCarousel.tsx  Heading.tsx  Headline.astro  HeroVersions.tsx  JsonToDoc.tsx  Logo.astro  SectionModal.tsx  StackedCarousel.tsx  StarrySky.tsx  TerminalRender.astro  ThemeToggle.tsx
documentation/src/components/background-shader/: stars-fragment.glsl  stars-vertex.glsl
documentation/src/components/blog/: Author.astro
documentation/src/components/cat-shader/: fragment.glsl  vertex.glsl
documentation/src/components/sidebar/: Sidebar.tsx  SidebarEntry.tsx  SidebarGroup.tsx  SidebarLink.tsx
documentation/src/components/table-of-content/: MobileTableOfContents.astro  TableOfContentsList.astro  starlight-toc.ts
documentation/src/content/: consts.ts
documentation/src/content/blog/: 2020-01-24-release-2.0.mdx  2020-07-09-release-2.1.mdx  2020-08-28-release-2.2.mdx  2020-09-02-release-2.3.mdx  2020-11-30-release-2.4.mdx  2021-07-26-release-3.0.mdx  2021-09-25-release-3.1.mdx  2022-02-21-release-3.2.mdx  2023-08-20-bun.mdx  2023-10-23-release-4.0.mdx  2025-11-11-evolving-yarn.mdx  2026-01-19-evolving-yarn.mdx  2026-01-28-yarn-6-preview.mdx  authors.yml
documentation/src/content/docs/appendix/: nm-peer-deps.md  pnp-api.md  pnp-spec.md  (+1 more)
documentation/src/fonts/: font-face.css
documentation/src/layouts/: PackageLayout.tsx
documentation/src/overrides/: ContentPanel.astro  CustomSearch.astro  CustomSocialIcons.astro  Footer.astro  Head.astro  MarkdownContent.astro  PageFrame.astro  PageTitle.astro  Pagination.astro  Sidebar.astro
documentation/src/overrides/navigation/: index.astro
documentation/src/pages/: 404.astro  _404.tsx  index.astro  search.astro
documentation/src/pages/blog/: [...slug].astro  index.astro
documentation/src/pages/package/: [...all].astro
documentation/src/plugins/: remark-command-line-highlight.mjs  remark-modified-time.mjs  remark-reading-time.mjs
documentation/src/plugins/yarn-cli-docs/: binaries.ts  content-builder.ts  helpers.ts  index.ts
documentation/src/sections/: CTA.astro  Features.astro  Hero.astro  HowItWorks.astro  Testimonials.astro
documentation/src/styles/: asides.css  global.css  markdown-content.css  markdown-ui.css  markdown.css  splide.css
documentation/src/types/: command.ts  package.ts  sidebar.ts  splide-react.d.ts  svg-react.d.ts
documentation/src/utils/: cn.ts  helpers.ts
documentation/src/utils/configuration/: yarnrc.json
scripts/: @clipanion-astro.tgz  @clipanion-expressive-code.tgz  @clipanion-remark.tgz  @clipanion-tools.tgz  bench-run.sh  corepack-mock.cjs  exec-artifact.mjs  exec-release.mjs  generate-page.mjs  import-artifacts.mjs  jest.sh  run-tests.mjs  run-yarn.cjs  run-yarn.mjs  submit-bench-data.js  test-runner.mjs
scripts/benchmarks/: monorepo.tgz
tests/acceptance-tests/: jest.config.js  package.json  test-server.js  tsconfig.json
tests/acceptance-tests/pkg-tests-core/: package.json
tests/acceptance-tests/pkg-tests-fixtures/: package.json
tests/acceptance-tests/pkg-tests-specs/: package.json
tests/acceptance-tests/pkg-tests-specs/sources/: node-modules.test.ts  pnp-esm.test.ts  pnp.test.js  script.test.ts
tests/binaries/: yarn
(+233 files in other folders)
