[workspace]
resolver = "2"
members = [
    "packages/zpm-ci",
    "packages/zpm-config",
    "packages/zpm-formats",
    "packages/zpm-macro-enum",
    "packages/zpm-macro-helpers",
    "packages/zpm-parsers",
    "packages/zpm-primitives",
    "packages/zpm-semver",
    "packages/zpm-switch",
    "packages/zpm-utils",
    "packages/zpm-git",
    "packages/zpm",
]

[profile.bench]
debug = true

[profile.release]
debug = true

[profile.release-lto]
inherits = "release"
lto = true

[profile.release-lto-nodebug]
inherits = "release-lto"
debug = false
strip = "debuginfo"
