[workspace]
resolver = "2"
members = [
    "packages/zpm-config",
    "packages/zpm-formats",
    "packages/zpm-git",
    "packages/zpm-macro-enum",
    "packages/zpm-macro-helpers",
    "packages/zpm-parsers",
    "packages/zpm-primitives",
    "packages/zpm-semver",
    "packages/zpm-switch",
    "packages/zpm-sync",
    "packages/zpm-utils",
    "packages/zpm",
]

[workspace.metadata.cargo-shear]
ignored = ["zpm-semver", "zpm-switch"]
ignored-paths = ["packages/zpm/*.rs"]

[profile.bench]
debug = true

[profile.release]
debug = true

[profile.release-lto]
inherits = "release"
lto = true

[profile.release-lto-nodebug]
inherits = "release-lto"
debug = false
strip = "debuginfo"
