[workspace]
resolver = "2"
members = [
    "packages/zpm-config",
    "packages/zpm-formats",
    "packages/zpm-git",
    "packages/zpm-macro-enum",
    "packages/zpm-macro-helpers",
    "packages/zpm-parsers",
    "packages/zpm-primitives",
    "packages/zpm-semver",
    "packages/zpm-switch",
    "packages/zpm-sync",
    "packages/zpm-utils",
    "packages/zpm",
]

[workspace.dependencies]
zpm = { path = "packages/zpm" }
zpm-config = { path = "packages/zpm-config" }
zpm-formats = { path = "packages/zpm-formats" }
zpm-git = { path = "packages/zpm-git" }
zpm-macro-enum = { path = "packages/zpm-macro-enum" }
zpm-macro-helpers = { path = "packages/zpm-macro-helpers" }
zpm-parsers = { path = "packages/zpm-parsers" }
zpm-primitives = { path = "packages/zpm-primitives" }
zpm-semver = { path = "packages/zpm-semver" }
zpm-switch = { path = "packages/zpm-switch" }
zpm-sync = { path = "packages/zpm-sync" }
zpm-utils = { path = "packages/zpm-utils" }

assert_cmd = "2.0.17"
base64 = "0.22.0"
blake2 = "0.10.6"
bytes = "1"
brotli = "8.0.1"
chrono = { version = "0.4.38", features = ["serde"] }
crc32fast = "1.4.2"
convert_case = "0.8.0"
dashmap = "6"
clipanion = { git = "https://github.com/arcanis/clipanion-rs.git", features = ["serde", "tokens"] }
colored = "3.0.0"
dialoguer = "0.11.0"
divan = { version = "4.2.0", package = "codspeed-divan-compat" }
erased-serde = "0.4.6"
env_logger = "0.11.8"
fancy-regex = "0.13.0"
flate2 = { version = "1.0.31", features = ["zlib-rs"] }
fundu = "2.0.1"
futures = "0.3.30"
git-url-parse = "0.4.5"
globset = "0.4.16"
hex = "0.4.3"
hickory-resolver = "0.25.2"
http = "1.3.1"
http-body-util = "0.1"
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
itertools = "0.14.0"
indexmap = {version = "2.11.0", features = ["serde"]}
num = "0.4.3"
pretty_assertions = "1.4.1"
pnp = { git = "https://github.com/yarnpkg/pnp-rs.git", branch = "mael/pub-vpath" }
proc-macro2 = "1.0.79"
p256 = "0.13.2"
quote = "1.0.36"
open = "5.3.2"
ouroboros = "0.18.5"
rand = "0.9.2"
rayon = "1.10.0"
rkyv = { version = "0.8", features = ["bytecheck"] }
reqwest = { version = "0.12.26", default-features = false, features = ["gzip", "http2", "hickory-dns", "rustls-tls"] }
regex = "1.10.6"
ring = "0.17.14"
rstest = "0.26.1"
serde_plain = "1.0.2"
serde_with = "3.9.0"
serde_yaml = "0.9.34"
sha1 = "0.10.6"
sha2 = "0.10.8"
shlex = "1.3.0"
similar = "2.7.0"
sonic-rs = "0.5.1"
spki = "0.7.3"
shellexpand = "3.1.1"
syn = "2.0.74"
thiserror = "1.0.69"
timeago = "0.5.0"
tokio = { version = "1.39.2", features = ["full"] }
tower = { version = "0.5.2", features = ["limit"] }
serde_json = "1.0.145"
serde = { version = "1.0.207", features = ["derive"] }
wax = { git = "https://github.com/arcanis/wax.git" }
url = "2.5.7"
urlencoding = "2.1.3"
zerocopy = { version = "0.8.33", features = ["derive"] }

[workspace.metadata.cargo-shear]
ignored = ["zpm-semver", "zpm-switch"]
ignored-paths = ["packages/zpm/*.rs"]

[profile.bench]
debug = true

[profile.release]
debug = true

[profile.release-lto]
inherits = "release"
lto = true

[profile.release-lto-nodebug]
inherits = "release-lto"
debug = false
strip = "debuginfo"
